# swarm-cost-optimizer

./: README.md  pyproject.toml
src/swarm_cost_optimizer/: __init__.py  cli.py  providers.py  router.py
src/swarm_cost_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_router.py
